# rpinters

./: meson.build
data/: 10-rpinters.rules  meson.build
debian/: changelog
po/: pl.po
src/: rpinters.c
